--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
         <div id="ball"></div>
         <div id="goal"></div>
     </div>
-    <script src="script.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
