--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <div id="game-container">
         <div id="ball"></div>
-        <div id="goal"></div>
+        <div class="goal" id="goal1"></div>
+        <div class="goal" id="goal2"></div>
     </div>
     <script src="scripts.js"></script>
 </body>
