--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
         top: 10px;
         left: 10px;
         font-size: 18px;
-        color: white;
+        color: black;
     }
     #score {
         position: absolute;
         top: 40px;
         left: 10px;
         font-size: 18px;
-        color: white;
+        color: black;
     }
 </style>
 </head>
